# AI-Powered_Stock_Invest_Advisor-CrewAI-

./: Procfile  README.md  app.py  pyproject.toml  requirements.txt
src/stock_invest_advisor/: crew.py  main.py
src/stock_invest_advisor/config/: agents.yaml  tasks.yaml
templates/: index.html  result.html
web/: app.py
web/templates/: index.html  result.html
