[project]
name = "stock_invest_advisor"
version = "0.1.0"
description = "stock_invest_advisor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
stock_invest_advisor = "stock_invest_advisor.main:run"
run_crew = "stock_invest_advisor.main:run"
train = "stock_invest_advisor.main:train"
replay = "stock_invest_advisor.main:replay"
test = "stock_invest_advisor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
